cleaning up a good chunk of the code.  variable make a lot more sense, and superflous steps were eliminated deleting FindNamespaces class and consolidating the operations in OrderGraph.  Applied all the changes across these files from class Renames/Delete/Variable Renames.  Added two test classes for Order Grap and Namespace Data Spec to be able to see more clearly what the expected output is to be.  Could use a few more test, but gave it a few xsd files to test out with.  Also added spock libraries to the build

--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,14 @@ apply plugin: 'groovy'
 
 group = 'com.jacobo.gradle.plugins'
 
+repositories { 
+  mavenCentral()
+}
+
 dependencies {
    compile gradleApi()
    groovy localGroovy()
+   testCompile "org.spockframework:spock-core:0.6-groovy-1.8" 
 }
 
 task unversionedJar (type: Jar, dependsOn: 'jar') {
