--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,6 @@
-version=0.1
+version=1.0
+bintray_api_base_url=https://api.bintray.com
+bintray_username=djmijares
+bintray_repo=gradle-plugins
+bintray_package=gradle-jaxb
+bintray_api_key=##API KEY!##
