finalizing changes from plugin repo name change and refactor of the bad naming choice and updating readme and examples script with buildscript download url from bintray

--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -1,10 +1,12 @@
 buildscript {
   repositories { 
-    flatDir dirs: "../build/libs/"
+    ivy { 
+      url 'http://dl.bintray.com/content/djmijares/gradle-plugins' 
+    }
   }
 
   dependencies {
-    classpath ':gradle-jaxb-plugin:1.0'
+    classpath 'com.jacobo.gradle.plugins:gradle-jaxb-plugin:1.0'
   }
 }
 
