--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,15 @@ group = 'com.jacobo.gradle.plugins'
 
 repositories { 
   mavenCentral()
+  maven {
+    url 'http://dl.bintray.com/content/djmijares/gradle-plugins/'
+  }
 }
 
 dependencies {
    compile gradleApi()
    compile localGroovy()
+   compile 'org.gradle.jacobo:gradle-xsd-wsdl-slurping:1.0.2'
    testCompile "org.spockframework:spock-core:0.7-groovy-1.8"
    testCompile 'cglib:cglib-nodep:2.2'
    testCompile 'org.objenesis:objenesis:1.2'
