--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
    compile gradleApi()
    compile localGroovy()
    compile 'org.gradle.jacobo:gradle-xsd-wsdl-slurping:1.0.3'
+   compile 'com.google.inject:guice:3.0'
    testCompile "org.spockframework:spock-core:0.7-groovy-1.8"
    testCompile 'cglib:cglib-nodep:2.2'
    testCompile 'org.objenesis:objenesis:1.2'
