adding integration tests -- ensuring proper runtime functionality and guice binding.
Even the Xjc ant task can be checked for runtime correctness ONLY.
AntXjc has to be mocked, but it still runs through a full task
execution (and dependent execution) to arrive at a mock that is checked
for interaction.

Haven't figured out how to test ant Builder yet....

--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,7 @@ buildscript{
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply from: 'cobertura.gradle'
+apply from: 'integTest.gradle'
 
 group = 'com.jacobo.gradle.plugins'
 
