examples folder is modified after some testing with the almost finished plugin.
the example/build.gradle has an additional block of commented code to
make local testing after making changes easier. I don't think there is a
concept of environments like their are in grails :/  It's ugly, but it
is only example code and it works well

--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -1,5 +1,24 @@
 buildscript {
-  repositories { 
+  // uncomment for local testing  
+  //**********************************************************
+  // repositories {
+  //   flatDir { dirs '../build/libs' }
+  //   mavenCentral()
+  //   maven {
+  //     url 'http://dl.bintray.com/content/djmijares/gradle-plugins/'
+  //   }
+  // }
+
+  // dependencies {
+  //   classpath ':gradle-jaxb-plugin-1.1'
+  //   classpath 'com.google.inject:guice:3.0'
+  //   classpath 'org.gradle.jacobo:gradle-xsd-wsdl-slurping:1.0.3'
+  // }
+  //**********************************************************
+
+  // use artifacts from bintray
+  //******************************************************
+  repositories {
     maven { 
       url 'http://dl.bintray.com/content/djmijares/gradle-plugins' 
     }
