--- a/build.gradle
+++ b/build.gradle
@@ -2,12 +2,13 @@ buildscript{
   apply from: 'buildscript.gradle'
 }
 
+apply from: 'publishing.gradle'
 apply plugin: 'groovy'
 apply plugin: 'maven'
 apply from: 'cobertura.gradle'
 apply from: 'integTest.gradle'
 
-group = 'com.jacobo.gradle.plugins'
+group = 'org.gradle.jacobo.plugins'
 
 repositories { 
   mavenCentral()
@@ -53,47 +54,6 @@ task uninstallPlugin (type: Delete) {
 	group = 'installation'
 	description = 'Removes the plugin from your gradle distribution.'
 	delete("/${gradleInstallDir}/lib/plugins/${unversionedJar.archiveName}")
-}
-
-uploadArchives {
-  repositories {
-    mavenDeployer {
-      repository(url : bintray_api_base_url + '/maven/' + bintray_username + '/' + bintray_repo + '/' + bintray_package + '/') {
-	try {
-	  authentication(userName: bintray_username, password: bintray_api_key)
-	} catch (MissingPropertyException pne) {
-	  // ignore, don't authenticate
-	}
-      }
-      pom {
-	project {
-	  name 'gradle-jaxb-plugin'
-	  description 'A Gradle plugin for parsing a diretory of XSDs, graphing them out based on namespace dependencies, and generating binding files for other folders to bind off of and not have to regenerate the same schema objects again'
-	  url 'https://github.com/djmijaes/gradle-jaxb-plugin'
-	  licenses {
-	    license {
-	      name 'Apache License, Version 2.0'
-	      url 'http://www.apache.org/licenses/LICENSE-2.0'
-	      distribution 'repo'
-	    }
-	  }
-	  developers {
-	    developer {
-	      id 'djmijares'
-	      name 'Daniel Mijares'
-	      email 'daniel.j.mijares@gmail.com'
-	    }
-	  }
-	}
-      }   
-      // // Dirty hack for GRADLE-1285
-      // pom.withXml { root ->
-      //     def children = root.asNode().children()
-      //     def versionIndex = children.indexOf(children.find {it.name().localPart == 'version'})
-      //     children.add(versionIndex + 1, new Node(null, 'packaging', 'jar'))
-      // }
-    }
-  }
 }
 
 task wrapper(type: Wrapper) {
