modifying props file for publishing plugin, didn't need a lot of fields I used to have

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,3 @@
 version=1.3
-bintray_api_base_url=https://api.bintray.com
 bintray_username=djmijares
-bintray_repo=gradle-plugins
-bintray_package=gradle-jaxb-plugin
-bintray_api_key=##API KEY##
+bintray_api_key=""
