--- a/publishing.gradle
+++ b/publishing.gradle
@@ -5,6 +5,10 @@ publishing {
   publications {
     plugin(MavenPublication) {
       from components.java
+
+      artifact groovyDocJar {
+	classifier "groovydoc"
+      }
     }
   }
 }
