adding bintray and drone.io badges to README, adding class diagram to detailed docs, bumping version to 1.3.1, adding groovydocjar artifact and configuring publisher to publish groovydoc to bintray as well.
Maven plugin was being applied, but it is no longer used so it is out.

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,6 @@ buildscript{
 
 apply from: 'publishing.gradle'
 apply plugin: 'groovy'
-apply plugin: 'maven'
 apply from: 'cobertura.gradle'
 apply from: 'integTest.gradle'
 
@@ -41,6 +40,11 @@ groovydoc {
   link("http://www.gradle.org/docs/current/javadoc/", "org.gradle.", "org.gradle.api.")
 }
 
+task groovyDocJar(type: Jar, dependsOn: groovydoc) {
+  classifier = 'groovydoc'
+  from groovydoc.destinationDir
+}
+
 task unversionedJar (type: Jar, dependsOn: 'jar') {
 	version = null
 	from sourceSets.main.output
@@ -62,6 +66,10 @@ task uninstallPlugin (type: Delete) {
 	group = 'installation'
 	description = 'Removes the plugin from your gradle distribution.'
 	delete("/${gradleInstallDir}/lib/plugins/${unversionedJar.archiveName}")
+}
+
+artifacts {
+  archives jar, groovyDocJar
 }
 
 task wrapper(type: Wrapper) {
