--- a/buildscript.gradle
+++ b/buildscript.gradle
@@ -2,11 +2,11 @@ project.buildscript {
 
   repositories {
     mavenCentral()
-    maven { url 'http://jcenter.bintray.com' }
+    jcenter()
   }
 
   dependencies {
     classpath "net.saliman:gradle-cobertura-plugin:1.1.2"
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.3'
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:0.6'
   }
 }
