sources jar task for prep into jcenter

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,11 @@ task groovyDocJar(type: Jar, dependsOn: groovydoc) {
   from groovydoc.destinationDir
 }
 
+task groovySourceJar(type: Jar, dependsOn: 'jar') {
+  classifier = 'sources'
+  from sourceSets.main.allSource
+}
+
 task unversionedJar (type: Jar, dependsOn: 'jar') {
 	version = null
 	from sourceSets.main.output
