backwards compatibility with java 1.6, not really anythin 1.7 specific for source or output.

--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,9 @@ apply from: 'integTest.gradle'
 
 group = 'org.gradle.jacobo.plugins'
 
+sourceCompatibility = 1.6
+targetCompatibility = 1.6
+
 repositories { 
   mavenCentral()
   maven {
