common library for these two plugins is coming from jcenter now

--- a/build.gradle
+++ b/build.gradle
@@ -14,9 +14,7 @@ targetCompatibility = 1.6
 
 repositories { 
   mavenCentral()
-  maven {
-    url 'http://dl.bintray.com/content/djmijares/gradle-plugins/'
-  }
+  jcenter()
 }
 
 dependencies {
