--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -4,29 +4,25 @@ buildscript {
   // repositories {
   //   flatDir { dirs '../build/libs' }
   //   mavenCentral()
-  //   maven {
-  //     url 'http://dl.bintray.com/content/djmijares/gradle-plugins/'
-  //   }
+  //   jcenter()
   // }
 
   // dependencies {
-  //   classpath ':gradle-jaxb-plugin-1.3.2'
+  //   classpath ':gradle-jaxb-plugin-1.3.3'
   //   classpath 'com.google.inject:guice:3.0'
-  //   classpath 'org.gradle.jacobo:gradle-xsd-wsdl-slurping:1.0.3'
+  //   classpath 'org.gradle.jacobo:gradle-xsd-wsdl-slurping:1.1.1'
   // }
   //**********************************************************
 
   // use artifacts from bintray
   //******************************************************
   repositories {
-    maven { 
-      url 'http://dl.bintray.com/content/djmijares/gradle-plugins' 
-    }
+    jcenter()
     mavenCentral()
   }
 
   dependencies {
-    classpath 'org.gradle.jacobo.plugins:gradle-jaxb-plugin:1.3.2'
+    classpath 'org.gradle.jacobo.plugins:gradle-jaxb-plugin:1.3.3'
   }
 }
 
