--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -8,9 +8,9 @@ buildscript {
   // }
 
   // dependencies {
-  //   classpath ':gradle-jaxb-plugin-1.3.4'
+  //   classpath ':gradle-jaxb-plugin-1.3.5'
   //   classpath 'com.google.inject:guice:3.0'
-  //   classpath 'org.gradle.jacobo:gradle-xsd-wsdl-slurping:1.1.1'
+  //   classpath 'com.github.jacobono:gradle-xsd-wsdl-slurping:1.1.2'
   // }
   //**********************************************************
 
@@ -22,7 +22,7 @@ buildscript {
   }
 
   dependencies {
-    classpath 'org.gradle.jacobo.plugins:gradle-jaxb-plugin:1.3.4'
+    classpath 'com.github.jacobono.plugins:gradle-jaxb-plugin:1.3.5'
   }
 }
 
