--- a/examples/settings.gradle
+++ b/examples/settings.gradle
@@ -1,4 +1,4 @@
-include 'hello-world-schema', 'hello-world-import-schema'
+include 'hello-world-schema', 'hello-world-import-schema', 'hello-world-spaces-dir-schema'
 
 rootProject.children.each { project ->
     project.buildFileName = "${project.name}.gradle"
