Adds example demonstrating multiple XSDs with bindings file

--- a/examples/settings.gradle
+++ b/examples/settings.gradle
@@ -1,7 +1,11 @@
-include 'hello-world-schema', 'hello-world-import-schema', 'hello-world-spaces-dir-schema'
+include 'hello-world-schema', 
+        'hello-world-import-schema', 
+        'hello-world-spaces-dir-schema',
+        'hello-world-bindings-schema'
 
 rootProject.children.each { project ->
     project.buildFileName = "${project.name}.gradle"
     assert project.projectDir.isDirectory()
     assert project.buildFile.isFile()
 }
+
