--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -1,17 +1,17 @@
 buildscript {
   // uncomment for local testing  
   //**********************************************************
-  // repositories {
-  //   flatDir { dirs '../build/libs' }
-  //   mavenCentral()
-  //   jcenter()
-  // }
+  repositories {
+     flatDir { dirs '../build/libs' }
+     mavenCentral()
+     jcenter()
+  }
 
-  // dependencies {
-  //   classpath ':gradle-jaxb-plugin-1.3.5'
-  //   classpath 'com.google.inject:guice:3.0'
-  //   classpath 'com.github.jacobono:gradle-xsd-wsdl-slurping:1.1.2'
-  // }
+  dependencies {
+     classpath ':gradle-jaxb-plugin-1.3.5'
+     classpath 'com.google.inject:guice:3.0'
+     classpath 'com.github.jacobono:gradle-xsd-wsdl-slurping:1.1.2'
+  }
   //**********************************************************
 
   // use artifacts from bintray
@@ -38,6 +38,7 @@ subprojects { project ->
 
   if(project.name.endsWith("-schema")) { 
     apply plugin: 'com.github.jacobono.jaxb'
+    apply plugin: 'java'
 
     dependencies { 
       jaxb 'com.sun.xml.bind:jaxb-xjc:2.2.7-b41' //jaxws 2.2.6 uses jaxb 2.2.5, but can't dL 2.2.5 from maven the pom is off TODO
