adding the examples for a xjb binding provided by @bobatronx's PR #28
No errors when running xjc on his examples

--- a/examples/settings.gradle
+++ b/examples/settings.gradle
@@ -1,4 +1,5 @@
-include 'hello-world-schema', 'hello-world-import-schema', 'hello-world-spaces-dir-schema'
+include 'hello-world-schema', 'hello-world-import-schema',
+        'hello-world-spaces-dir-schema', 'hello-world-bindings-schema'
 
 rootProject.children.each { project ->
     project.buildFileName = "${project.name}.gradle"
