Added the accessExternalSchema property to the XJC task to allow for imports during compilation.

--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -46,3 +46,8 @@ subprojects { project ->
     }
   }
 }
+
+task xjc {
+  // This is needed for Java 8.
+  System.setProperty('javax.xml.accessExternalSchema', 'file')
+}
