Added the gradle.properties way of determining if a project needs the JAXB pluging applied to both the examples and the README.

--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -33,7 +33,8 @@ allprojects {
 }
 
 subprojects { project ->
-  if(project.name.endsWith("-schema")) {
+  if(project.name.endsWith("-schema") ||
+          Boolean.valueOf(project.getProperties().getOrDefault('doJAXB', 'false'))) {
     apply plugin: 'com.github.jacobono.jaxb'
 
     dependencies { 
