--- a/examples/hello-world-spaces-dir-schema/hello-world-spaces-dir-schema.gradle
+++ b/examples/hello-world-spaces-dir-schema/hello-world-spaces-dir-schema.gradle
@@ -2,5 +2,5 @@ version = "0.1"
 
 jaxb {
   xsdDir = "schema/HelloWorld"
-  episodesDir = "schema/space episodes"
+  episodesDir = "${project.name}/build/generated-resources/schema/space episodes"
 }
