Updated the location of the jaxb.episodesDir in the example build files.

--- a/examples/hello-world-bindings-schema/hello-world-bindings-schema.gradle
+++ b/examples/hello-world-bindings-schema/hello-world-bindings-schema.gradle
@@ -9,6 +9,7 @@ jaxb {
   xsdDir = "schema/multiple"
   bindingsDir = "schema/multiple/xjb"
   bindings = ["xsd-bindings.xjb"]
+  episodesDir = "${project.name}/build/generated-resources/schema/episodes"
   xjc {
     taskClassname = "org.jvnet.jaxb2_commons.xjc.XJC2Task"
     args = ["-Xannotate"]
