--- a/examples/hello-world-import-schema/hello-world-import-schema.gradle
+++ b/examples/hello-world-import-schema/hello-world-import-schema.gradle
@@ -2,4 +2,5 @@ version = "0.1"
 
 jaxb { 
   xsdDir = "schema/Import"
+  episodesDir = "${project.name}/build/generated-resources/schema/episodes"
 }
