Updated the JSE Docs link.

--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ test {
 groovydoc {
   docTitle = "Gradle XSD Plugin"
   link("http://groovy.codehaus.org/gapi/", "groovy.", "org.codehaus.groovy.")
-  link("http://doc.oracle.com/javase/7/docs/api/", "java.")
+  link("http://docs.oracle.com/javase/8/docs/api/", "java.")
   link("http://google-guice.googlecode.com/svn/trunk/javadoc/", "com.google.")
   link("http://www.gradle.org/docs/current/javadoc/", "org.gradle.", "org.gradle.api.")
 }
