--- a/examples/hello-world-import-schema/hello-world-import-schema.gradle
+++ b/examples/hello-world-import-schema/hello-world-import-schema.gradle
@@ -1,6 +1,6 @@
 version = "0.1"
 
 jaxb { 
-  xsdDir = "schema/Import"
-  episodesDir = "${project.name}/build/generated-resources/schema/episodes"
+  xsdDir = "${project.rootDir}/schema/Import"
+  episodesDir = "${project.projectDir}/build/generated-resources/schema/episodes"
 }
