--- a/examples/hello-world-spaces-dir-schema/hello-world-spaces-dir-schema.gradle
+++ b/examples/hello-world-spaces-dir-schema/hello-world-spaces-dir-schema.gradle
@@ -1,6 +1,6 @@
 version = "0.1"
 
 jaxb {
-  xsdDir = "schema/HelloWorld"
-  episodesDir = "${project.name}/build/generated-resources/schema/space episodes"
+  xsdDir = "${project.rootDir}/schema/HelloWorld"
+  episodesDir = "${project.projectDir}/build/generated-resources/schema/space episodes"
 }
