Updated all references from ${project.projectDir}/build to ${project.buildDir} to allow more flexibility.

--- a/examples/build.gradle
+++ b/examples/build.gradle
@@ -48,7 +48,7 @@ subprojects { project ->
             jaxb 'javax.xml.bind:jaxb-api:2.2.7'
         }
 
-        def generatedDir = "${project.projectDir}/build/generated-sources/xjc"
+        def generatedDir = "${project.buildDir}/generated-sources/xjc"
 
         jaxb {
             xjc {
