--- a/examples/hello-world-bindings-schema/hello-world-bindings-schema.gradle
+++ b/examples/hello-world-bindings-schema/hello-world-bindings-schema.gradle
@@ -8,7 +8,7 @@ dependencies {
 jaxb {
   xsdDir = "${project.rootDir}/schema/multiple"
   bindingsDir = "${project.rootDir}/schema/multiple/xjb"
-  episodesDir = "${project.projectDir}/build/generated-resources/schema/episodes"
+  episodesDir = "${project.buildDir}/generated-resources/schema/episodes"
   xjc {
     taskClassname = 'org.jvnet.jaxb2_commons.xjc.XJC2Task'
     args = ['-Xannotate']
