Updated all references from ${project.projectDir}/build to ${project.buildDir} to allow more flexibility.

--- a/examples/hello-world-bindings-schema/hello-world-bindings-schema.gradle
+++ b/examples/hello-world-bindings-schema/hello-world-bindings-schema.gradle
@@ -12,6 +12,6 @@ jaxb {
   xjc {
     taskClassname = "org.jvnet.jaxb2_commons.xjc.XJC2Task"
     args = ["-Xannotate"]
-    destinationDir = "${project.projectDir}/build/generated-sources/xjc"
+    destinationDir = "${project.buildDir}/generated-sources/xjc"
   }
 }
