--- a/examples/hello-world-import-schema/hello-world-import-schema.gradle
+++ b/examples/hello-world-import-schema/hello-world-import-schema.gradle
@@ -3,6 +3,6 @@ version = "0.1"
 jaxb { 
   xsdDir = "${project.rootDir}/schema/Import"
   xjc {
-    destinationDir = "${project.projectDir}/build/generated-sources/xjc"
+    destinationDir = "${project.buildDir}/generated-sources/xjc"
   }
 }
