--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,14 @@ buildscript {
         mavenCentral()
         jcenter()
     }
+    dependencies {
+        classpath( "com.netflix.nebula:gradle-git-scm-plugin:3.0.1")
+    }
 }
 
 apply plugin: 'groovy'
 apply plugin: 'maven-publish'
+apply plugin: 'nebula.gradle-git-scm'
 
 repositories {
     mavenCentral()
